kubernetes/apps/monitoring/kube-prometheus-stack/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - grafana.krapulax.dev
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
sops:
  age:
    - recipient: age1saea3t7l67lavg0ardepzys6egp50g82uvks98pk53xdlj57uf8sa2arcs
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2eUVhdVVLT1pxSDhEakEr
[...]
        BHkg7uvdnVKCMxOOBUw1I4GTQ0Esi/+HW/NfrwJDlEaXRK5QlMpKow==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-17T07:48:13Z"
  mac: ENC[AES256_GCM,data:zhc0wdKCefmuTvE5v1XwDeBlEPjx3BQHfQpNzCQsqa5gghpuFTKIZv4QI+Gckb3qHQy7hSo3K3rBrKPNk2kaZQbfsEEBDKWdKGf3oqzQDNtBmjIRTfoHwMGyj+J5MKWMchvAw40aPFhIpD7MzK/BI6r/t/yllKxHDR8HGUz5HJQ=,iv:hPJJ2e5GtLq0y4XHDZlUCHRDOOuq90QBPKxa9f95xXE=,tag:geMPueUcMzzjWF3Lx6C0bA==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
