kubernetes/apps/monitoring/kube-prometheus-stack/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - grafana.krapulax.dev
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
